fixing layout issue with mini map on profile page.
trello: https://trello.com/c/GQDGRJ6a/559-fix-darstellungsproblem-mit-karte

--- a/app/assets/stylesheets/wingolf_layout/profiles.css.sass
+++ b/app/assets/stylesheets/wingolf_layout/profiles.css.sass
@@ -37,6 +37,11 @@ ul.section_container
     display: table-cell
   span.label-wrapper
     min-width: 100px
+
+.box.section.contact_information.with_small_map
+  ul.profile_fields.attributes
+    max-width: 293px
+    word-break: break-word
     
 .box.section.about_myself
   .value-wrapper
